# makigami

./: .gitignore  AI.md  BingSiteAuth.xml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GCS_REFACTOR_CHECKLIST.md  README.md  index.html  upload-to-gcs.sh
.cargo/: config.toml
docs/: README.md
docs/dev/: gcs_test_plan.md  gcs_testing.md
releases/download/v0.1.0/: mg-linux-x64
src/: build.rs  cli.rs  fastu64set.rs  main.rs  search.rs  storage.rs  utils.rs
