[package]
name = "makigami"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3 # aggressive optimization
lto = "fat"  # aggressive optimization
codegen-units = 1  # aggressive optimization
debug = false

[dependencies]
zstd = "0.13.2"
memmap2 = "0.9.5"
bincode = "2.0.0-rc.3"
rand = "0.8"
xorf = { version="0.11.0", features = ["bincode"] }

gxhash = "3.4.1"     # or the version you found
serde = { version = "1.0.216", features = ["derive"] }

clap = { version = "*", features = [ "derive" ] }

num_cpus = "*"