[package]
name = "makigami"
version = "0.1.0"
edition = "2024"
description = "High-performance log search for low-cost storage"
license = "Apache-2.0"
repository = "https://github.com/nt-riken/makigami"
readme = "README.md"
keywords = ["log", "search", "compression", "performance", "cli"]
categories = ["command-line-utilities", "compression", "filesystem"]

[[bin]]
name = "mg"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3 # aggressive optimization
lto = "fat"  # aggressive optimization
codegen-units = 1  # aggressive optimization
debug = false

[profile.flamegraph]
inherits = "release"
opt-level = 0         # Disable optimizations
lto = "off"           # Disable link-time optimizations
codegen-units = 16    # Allow more parallel code generation for faster builds
debug = true          # Include debug symbols
overflow-checks = true # Enable runtime overflow checks (default in debug builds)

[dependencies]
zstd = "0.13.2"
memmap2 = "0.9.5"
bincode = "2.0.0-rc.3"
rand = "0.8"
xorf = { version="0.11.0", features = ["bincode"] }

gxhash = "3.4.1"     # or the version you found
serde = { version = "1.0.216", features = ["derive"] }

clap = { version = "*", features = [ "derive" ] }

num_cpus = "*"

# Error handling
thiserror = "1.0"

# GCS support (optional feature) — uses google-cloud-storage crate; async confined to GCS module
[features]
default = []
gcs = ["google-cloud-storage", "tokio", "dirs"]

# Use latest to stay in sync with GCS API; requires Rust 1.85+ (edition 2024).
# Pin to 1.7 to avoid reqwest 0.12/0.13 conflict in 1.5.x dependency tree.
[dependencies.google-cloud-storage]
version = "1.7"
optional = true

[dependencies.tokio]
version = "1"
default-features = false
features = ["rt", "rt-multi-thread"]
optional = true

[dependencies.dirs]
version = "5.0"
optional = true